--- a/landingpage.html
+++ b/landingpage.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
+    <link rel="icon" type="image/svg" sizes="32x32" href="img/svg/favicon-32.svg">
+    <link rel="icon" type="image/svg" sizes="16x16" href="img/svg/favicon-16.svg">
+
     <title>Landingpage Dominic</title>
 </head>
 
