--- a/landingpage.html
+++ b/landingpage.html
@@ -14,6 +14,102 @@
 
 <body>
 
+
+    <div class="grid-container">
+        <div class="grid-1">
+
+
+            navbar
+        </div>
+
+
+        <div class="grid-2">
+            <div class="grid-2-box">
+                Title
+
+            </div>
+
+            test2
+        </div>
+
+
+        <div class="grid-3">
+            <section class="o-row o-row--lg">
+                <div class="o-container">
+                    <div class="o-layout o-layout--align-center o-layout--row-reverse">
+                        <div class="o-layout__item u-1-of-2-bp3 u-3-of-5-bp4">
+                            <figure class="c-figure">
+                                <!--<img src="img/png/illustration-main.png" alt="Main illustration">-->
+                            </figure>
+                        </div>
+                        <div class="o-layout__item u-1-of-2-bp3 u-2-of-5-bp4">
+                            <div class="u-max-width-md">
+                                <h2 class="c-lead c-lead--xl">
+                                    XXX is an app that shows the global temperature anomaly
+                                </h2>
+                                <p class="u-mb-lg u-color-secondary-base">
+                                    Herdius intends to build a highly performant decentralized financial platform. Using
+                                    the
+                                    latest innovation in distributed systems design, we are aiming to be the
+                                    next-generation
+                                    infrastructure for the entire cryptocurrency ecosystem.
+                                </p>
+                                <p>
+                                    <a class="c-link-cta" href="#!">
+                                        Subscribe to out email list
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+        </div>
+
+
+        <div class="grid-4">
+
+            test4
+
+        </div>
+
+        <!--<div class="grid-5">
+
+            test5
+
+        </div>
+
+
+        <div class="grid-6">
+
+            test6
+
+        </div>
+
+        <div class="grid-7">
+
+            test7
+
+        </div>
+        <div class="grid-8">
+
+            test8
+
+        </div>
+        <div class="grid-9">
+
+            test9
+
+        </div>-->
+
+
+    </div>
+
+
+
+
 </body>
 
 </html>
