--- a/landingpage.html
+++ b/landingpage.html
@@ -16,68 +16,53 @@
 
 
     <div class="grid-container">
-        <!--<div class="grid-1">
-
-
-
-        </div>
-
-
-        <div class="grid-2">
-            <div class="grid-2-box">
-
-
-            </div>
-
-            test2
-        </div>-->
-
 
         <div class="grid-3">
+
             <section class="o-row o-row--lg">
-                <div class="o-container ">
+                <div class="o-container ta ">
+
                     <div class="o-layout o-layout--align-center o-layout--row-reverse">
+                        <!--u-1-of-2-bp3 u-2-of-5-bp4   maakt verticale afstand te groot-->
+                        <div class="o-layout__item ">
+                            <!-- <div class="u-max-width-md"> kan content niet centraliseren-->
+                            <h1 class=" c-lead--xl ">
+                                Coming soon...</h1>
+                            <p class="c-lead--lg">While you are waiting, the climate is changing.</p>
 
-                        <div class="o-layout__item u-1-of-2-bp3 u-2-of-5-bp4">
-                            <div class="u-max-width-md">
-                                <h1 class="c-lead--m c-lead--xl ">
-                                    Coming soon...</h1>
-                                <p class="c-secondairy">While you are waiting, the climate is changing.</p>
-
-                                <p class="u-mb-lg c-lead--sm">
-                                    XXX is an app that shows the global temperature anomaly
-                                </p>
-                                <p>
-                                    <a class="c-link-cta" href="#!">
-                                        Subscribe to our email list
-                                    </a>
-                                </p>
-                            </div>
+                            <p class="u-mb-lg c-lead--sm">
+                                XXX is an app that shows the global temperature anomaly.
+                            </p>
+                            <p>
+                                <a class="c-link-cta" href="#!">
+                                    Subscribe to our email list
+                                </a>
+                            </p>
                         </div>
                     </div>
                 </div>
-            </section>
-
-
         </div>
+        </section>
+
+    </div>
 
 
 
 
 
-        <div class="grid-4">
+    <div class="grid-4">
 
-            <section class="o-row o-row--lg">
-                <div class="o-container">
-                    <div class="o-container ">
-                        <div class="o-layout o-layout--align-center o-layout--row-reverse">
+        <section class="o-row o-row--lg">
+            <div class="o-container">
+                <div class="o-container ">
+                    <div class="o-layout o-layout--align-center o-layout--row-reverse">
 
-                            <figure class="c-figure">
-                                <img class="image" src="img/jpg/pexels-frederik-sørensen-2787469.jpg">
-                            </figure>
+                        <figure class="c-figure">
+                            <img class="image" src="img/jpg/pexels-frederik-sørensen-2787469.jpg">
+                        </figure>
 
-                        </div>
-                        <!--<div class="grid-5">
+                    </div>
+                    <!--<div class="grid-5">
 
             test5
 
@@ -107,9 +92,10 @@
         </div>-->
 
 
-                    </div>
+                </div>
 
-
+            </div>
+        </section>
 
 
 </body>
