edited secondairy text

--- a/landingpage.html
+++ b/landingpage.html
@@ -17,7 +17,7 @@
 
     <div class="grid-container">
 
-        <div class="grid-3">
+        <div class="grid-1">
 
             <section class="o-row o-row--lg">
                 <div class="o-container ta ">
@@ -28,7 +28,7 @@
                             <!-- <div class="u-max-width-md"> kan content niet centraliseren-->
                             <h1 class=" c-lead--xl ">
                                 Coming soon...</h1>
-                            <p class="c-lead--lg">While you are waiting, the climate is changing.</p>
+                            <p class="c-lead--lg">While you are waiting<br> the climate is changing.</p>
 
                             <p class="u-mb-lg c-lead--sm">
                                 XXX is an app that shows the global temperature anomaly.
@@ -50,7 +50,7 @@
 
 
 
-    <div class="grid-4">
+    <div class="grid-2">
 
         <section class="o-row o-row--lg">
             <div class="o-container">
@@ -62,41 +62,10 @@
                         </figure>
 
                     </div>
-                    <!--<div class="grid-5">
-
-            test5
-
-        </div>
-
-
-        <div class="grid-6">
-
-            test6
-
-        </div>
-
-        <div class="grid-7">
-
-            test7
-
-        </div>
-        <div class="grid-8">
-
-            test8
-
-        </div>
-        <div class="grid-9">
-
-            test9
-
-        </div>-->
-
 
                 </div>
-
             </div>
         </section>
-
 
 </body>
 
