--- a/landingpage.html
+++ b/landingpage.html
@@ -55,8 +55,7 @@
         <section class="o-row o-row--lg">
             <div class="o-container">
                 <div class="o-container ">
-                    <div class="o-layout o-layout--align-center o-layout--row-reverse">
-
+                    <div class="o-layout o-layout--align-center ">
                         <figure class="c-figure">
                             <img class="image" src="img/jpg/pexels-frederik-sørensen-2787469.jpg">
                         </figure>
