--- a/landingpage.html
+++ b/landingpage.html
@@ -21,8 +21,7 @@
 
             <section class="o-row o-row--lg">
                 <div class="o-container ta ">
-
-                    <div class="o-layout o-layout--align-center o-layout--row-reverse">
+                    <div class class="o-layout o-layout--align-center o-layout--row-reverse">
                         <!--u-1-of-2-bp3 u-2-of-5-bp4   maakt verticale afstand te groot-->
                         <div class="o-layout__item ">
                             <!-- <div class="u-max-width-md"> kan content niet centraliseren-->
@@ -33,16 +32,40 @@
                             <p class="u-mb-lg c-lead--sm">
                                 XXX is an app that shows the global temperature anomaly.
                             </p>
-                            <p>
+
                         </div>
-                        <a class="c-link-cta" href="#!">
-                            Subscribe to our email list
-                        </a>
-                        </p>
                     </div>
 
+
+                    <!--<div class="o-layout__item u-1-of-2-bp3 u-2-of-5-bp4 ">
+                        <div class="u-max-width-sm">
+                            <a class="c-link-cta" href="#!">
+                                Subscribe to our email list
+                            </a>
+                        </div>
+                    </div>-->
+
+
+
+                    <h3>EMAIL VERIFIATION</h3>
+                    <form action="#">
+                        <input class="c-input " type="email" placeholder="Email Address" name="username" id="username">
+                    </form>
+                    <button type=" submit"></button>
+
+
+
+
+
+
+                    <a class="c-link-cta" href="#!">
+                        Subscribe to our email list
+                    </a>
+
                 </div>
+
         </div>
+
         </section>
 
 
