--- a/landingpage.html
+++ b/landingpage.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/svg" sizes="32x32" href="img/svg/favicon-32.svg">
     <link rel="icon" type="image/svg" sizes="16x16" href="img/svg/favicon-16.svg">
 
+    <script defer src="./script/validation.js"></script>
+
     <title>Landingpage Dominic</title>
 </head>
 
@@ -47,11 +49,17 @@
 
 
 
-                    <h3>EMAIL VERIFIATION</h3>
-                    <form action="#">
-                        <input class="c-input " type="email" placeholder="Email Address" name="username" id="username">
+                    <h3>Email</h3>
+                    <form class="form" action="#" autocomplete="off">
+                        <div class="js-email-field">
+                            <input class="c-input " type="email" placeholder="Email Address" name="username"
+                                id="username" onkeydown="validation()">
+                            <p class="js-error-message"></p>
+                        </div>
                     </form>
-                    <button type=" submit"></button>
+
+
+                    <!--<button class="c-button" type=" submit"></button>-->
 
 
 
