added new html and js file, fetched data from API

--- a/landingpage.html
+++ b/landingpage.html
@@ -89,7 +89,7 @@
                     <div class="o-container ">
                         <div class="o-layout o-layout--align-center ">
                             <figure class="c-figure">
-                                <img class="image" src="img/jpg/pexels-frederik-sørensen-2787469.jpg">
+                                <img class="image" src="img/jpg/pexels-frederik-sørensen-2787469.jpg" alt="main-image">
                             </figure>
 
                         </div>
