--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
 
+    <link rel="icon" type="image/svg" sizes="32x32" href="img/svg/favicon-32.svg">
+    <link rel="icon" type="image/svg" sizes="16x16" href="img/svg/favicon-16.svg">
+
     <script defer src="./script/network.js"></script>
+
+    <!--Chart.js library-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
     <title>API APP</title>
 </head>
 
 <body>
+
+    <canvas id="chart" width="400" height="400"></canvas>
+
 
 </body>
 
