added click event to button in landingpage

--- a/landingpage.html
+++ b/landingpage.html
@@ -49,8 +49,9 @@
 
 
 
-                    <h3>Email</h3>
+
                     <form class="form" action="#" autocomplete="off">
+                        <h3>Fill in your email for updates </h3>
                         <div class="js-email-field">
                             <input class="c-input " type="email" placeholder="Email Address" name="username"
                                 id="username" onkeydown="validation()">
@@ -66,7 +67,7 @@
 
 
 
-                    <a class="c-link-cta" href="#!">
+                    <a class="c-button" href="#!">
                         Subscribe to our email list
                     </a>
 
