added hover effect to button

--- a/landingpage.html
+++ b/landingpage.html
@@ -11,6 +11,9 @@
 
     <script defer src="./script/validation.js"></script>
 
+    <!--Animate.css Library-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <title>Landingpage Dominic</title>
 </head>
 
@@ -60,14 +63,7 @@
                     </form>
 
 
-                    <!--<button class="c-button" type=" submit"></button>-->
-
-
-
-
-
-
-                    <a class="c-button" href="#!">
+                    <a class="c-button " href="#!">
                         Subscribe to our email list
                     </a>
 
