added button animation, finished landdingpage

--- a/landingpage.html
+++ b/landingpage.html
@@ -30,7 +30,7 @@
                         <!--u-1-of-2-bp3 u-2-of-5-bp4   maakt verticale afstand te groot-->
                         <div class="o-layout__item ">
                             <!-- <div class="u-max-width-md"> kan content niet centraliseren-->
-                            <h1 class=" c-lead--xl ">
+                            <h1 class="  c-lead--xl animate__animated animate__bounceInDown">
                                 Coming soon...</h1>
                             <p class="c-lead--lg">While you are waiting<br> the climate is changing.</p>
 
@@ -86,7 +86,7 @@
                     <div class="o-container ">
                         <div class="o-layout o-layout--align-center ">
                             <figure class="c-figure">
-                                <img class="image" src="img/jpg/pexels-frederik-sørensen-2787469.jpg" alt="main-image">
+                                <img class="image " src="img/jpg/pexels-frederik-sørensen-2787469.jpg" alt="main-image">
                             </figure>
 
                         </div>
