--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script defer src="./script/network.js"></script>
 
     <!--Chart.js library-->
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
 
     <title>API APP</title>
@@ -20,7 +21,30 @@
 
 <body>
 
-    <canvas id="chart" width="800" height="400"></canvas>
+
+
+    <div class="grid-container">
+        <div class="top-grid">
+            <section class="o-row o-row--lg">
+                <div class="o-container ta ">
+                    <div class class="o-layout o-layout--align-center o-layout--row-reverse">
+                        <div class="o-layout__item ">
+                            <h1 class="  c-lead--xl animate__animated animate__bounceInDown">
+                                Coming soon...</h1>
+                            <p class="c-lead--lg">While you are waiting<br> the climate is changing.</p>
+                            <p class="u-mb-lg c-lead--sm">
+                                XXX is an app that shows the global temperature anomaly.
+                            </p>
+
+                        </div>
+                    </div>
+                    </canvas>
+                </div>
+                <div class="middle-grid"> <canvas id="chart" width="600" height="400"></canvas></div>
+                <div class="bottom-grid-left"></canvas></div>
+                <div class="bottom-grid-right"></canvas></div>
+        </div>
+
 
 
 </body>
