added api.js and csv file for new data and chart

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/svg" sizes="32x32" href="img/svg/favicon-32.svg">
     <link rel="icon" type="image/svg" sizes="16x16" href="img/svg/favicon-16.svg">
 
-    <script defer src="./script/network.js"></script>
+    <script defer src="./script/api.js"></script>
 
     <!--Chart.js library-->
 
