--- a/landingpage.html
+++ b/landingpage.html
@@ -47,15 +47,16 @@
                                 id="username" onkeydown="validation()">
                             <p class="js-error-message"></p>
                         </div>
-                    </form>
 
 
-                    <a class="c-button " href="#!">
-                        Subscribe to our email list
-                    </a>
 
+
+
+                        <button class="c-button" type="submit" value="submit">
+                            Subscribe to our email list
+                        </button>
                 </div>
-
+                </form>
         </div>
 
         </section>
