edited chart data,name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class="o-layout__item ">
                             <h1 class="  c-lead--xl animate__animated animate__bounceInDown">
                                 Outlier</h1>
-                            <p class="c-lead--lg">Global temperature anomaly data<br><br>
+                            <p class="c-lead--lg">Global temperature data<br><br>
                                 1880-2020:</p>
                             <!--<p class="u-mb-lg c-lead--sm">
                                 XXX is an app that shows the global temperature anomaly.
