--- a/landingpage.html
+++ b/landingpage.html
@@ -32,7 +32,8 @@
                                 Coming soon...</h1>
                             <p class="c-lead--lg">While you are waiting<br> the climate is changing.</p>
                             <p class="u-mb-lg c-lead--sm">
-                                <span class="c-name">Outlier</span> is an app that shows the global temperature anomaly.
+                                <span class="c-name">Outlier</span> is an app that shows how the global temperature is
+                                changing.
                             </p>
 
                         </div>
@@ -44,7 +45,7 @@
                         <h3>Fill in your email for updates </h3>
                         <div class="js-email-field">
                             <input class="c-input " type="email" placeholder="Email Address" name="username"
-                                id="username" onkeydown="validation()">
+                                id="username" onkeydown="validation()" required>
                             <p class="js-error-message"></p>
                         </div>
 
