--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <div class="chart-html"> <canvas id="chart" width="600" height="350"></canvas></div>
+                <div class="chart-html"> <canvas id="chart" width="700" height="350"></canvas></div>
         </div>
 
 
@@ -55,9 +55,9 @@
                 <div class="o-container">
                     <div class="o-container ">
                         <div class="o-layout o-layout--align-center ">
-                            <figure class="c-figure">
+                            <!--   <figure class="c-figure">
                                 <img class="mockup" src="./img/png/mockup-outlier-postPS3.png" alt="mockup-image">
-                            </figure>
+                            </figure>-->
 
                         </div>
 
