--- a/landingpage.html
+++ b/landingpage.html
@@ -75,7 +75,7 @@
                     <div class="o-container ">
                         <div class="o-layout o-layout--align-center ">
                             <figure class="c-figure">
-                                <img class="image " src="img/jpg/pexels-frederik-sørensen-2787469.jpg" alt="main-image">
+                                <img class="image " src="img/png/mockup-outlier-postPS.png" alt="main-image">
                             </figure>
 
                         </div>
