added xx-colors to root

--- a/landingpage2.html
+++ b/landingpage2.html
@@ -71,11 +71,11 @@
 
                                     <h2>Get global warming data instantly.</h2>
                                     <div>
-                                        <p class="c-lead c-lead--md u-color-neutral-base">
+                                        <p class="c-lead c-lead--md u-color-neutral-dark">
                                             With the Warm app you can track the change of global average temperature
                                             throughout history.
                                         </p>
-                                        <p class="c-lead c-lead--md u-color-neutral-base">The app contains temperature
+                                        <p class="c-lead c-lead--md u-color-neutral-dark">The app contains temperature
                                             data of more than a century.</p>
                                     </div>
                                 </div>
