--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
                 <div class="o-container ta ">
                     <div class class="o-layout o-layout--align-center o-layout--row-reverse">
                         <div class="o-layout__item ">
-                            <h1 class="  c-lead--xl animate__animated animate__bounceInDown">
-                                Outlier</h1>
-                            <p class="c-lead--lg">Global temperature data<br><br>
+                            <!-- <h1 class="  c-lead--xl animate__animated animate__bounceInDown">
+                                Warm</h1>-->
+                            <picture class="animate__animated animate__fadeInDown animate__delay-1s">
+                                <source srcset="./img/png/logo.png" media="(min-width: 992px)">
+                                <source srcset="./img/png/logo.png" media="(min-width: 576px)">
+                                <img src="./img/png/logo.png" width="100" height="125">
+                            </picture>
+                            <p class="c-lead--lg">Global average temperature <br><br>
                                 1880-2020:</p>
                             <!--<p class="u-mb-lg c-lead--sm">
                                 XXX is an app that shows the global temperature anomaly.
@@ -41,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="chart-html"> <canvas id="chart" width="700" height="350"></canvas></div>
+                <div class="chart-html"> <canvas id="chart" width="500" height="350"></canvas></div>
         </div>
 
 
