--- a/landingpage2.html
+++ b/landingpage2.html
@@ -65,8 +65,7 @@
                                         <source srcset="./img/png/logo.png" media="(min-width: 576px)">
                                         <img src="./img/png/logo.png" width="100" height="125">
                                     </picture>
-                                    <h1
-                                        class="  c-lead--xl      animate__animated animate__fadeInDown animate__delay-2s">
+                                    <h1 class="  c-lead--xl      animate__animated animate__fadeIn animate__delay-1s">
                                         Warm</h1>
 
                                     <h2>Get global warming data instantly.</h2>
