responsive app page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div class="chart-html"> <canvas id="chart" width="500" height="350"></canvas></div>
+                <div class="chart-html"> <canvas id="chart" width="200" height="200"></canvas></div>
         </div>
 
 
@@ -54,24 +54,22 @@
 
 
 
-        <div class="grid-2">
 
-            <section class="o-row o-row--lg">
-                <div class="o-container">
-                    <div class="o-container ">
-                        <div class="o-layout o-layout--align-center ">
-                            <!--   <figure class="c-figure">
-                                <img class="mockup" src="./img/png/mockup-outlier-postPS3.png" alt="mockup-image">
-                            </figure>-->
 
-                        </div>
+        <section class="o-row o-row--lg">
+            <div class="o-container">
+
+                <div class="o-layout o-layout--align-center ">
+                    <div class="o-layout__item ">
+                        <!--    <div class="chart-html"> <canvas id="chart" width="100" height="350"></canvas></div>-->
 
                     </div>
                 </div>
-            </section>
-        </div>
-
+            </div>
+        </section>
     </div>
+
+
 
 
 </body>
