added button interaction

--- a/index.html
+++ b/index.html
@@ -62,7 +62,18 @@
                 <div class="o-layout o-layout--align-center ">
                     <div class="o-layout__item ">
                         <!--    <div class="chart-html"> <canvas id="chart" width="100" height="350"></canvas></div>-->
+                        <button id="open" class="c-button-modal ">
+                            <span class="c-button-modal__text">What does this mean?</span> </button>
 
+                        <div class="modal-container ">
+                            <div class="modal" id="modal_container">
+                                <h1>Models are cool</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium alias et
+                                    eligendi quo assumenda, fuga similique neque quae omnis ea aut enim recusandae
+                                    voluptas ducimus facere, aspernatur, error fugiat accusantium?</p>
+                                <button id="close" class="c-button-modal-close">Close me</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
