--- a/landingpage2.html
+++ b/landingpage2.html
@@ -74,7 +74,7 @@
                                             With the Warm app you can track the change of global average temperature
                                             throughout history.
                                         </p>
-                                        <p class="c-lead c-lead--md u-color-neutral-dark">The app contains temperature
+                                        <p class="c-lead c-lead--md u-color-neutral-dark">The app contains data temperature
                                             data of more than a century.</p>
                                     </div>
                                 </div>
