finished app page, added fonts

--- a/index.html
+++ b/index.html
@@ -67,11 +67,15 @@
 
                         <div class="modal-container ">
                             <div class="modal" id="modal_container">
-                                <h1>Models are cool</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium alias et
-                                    eligendi quo assumenda, fuga similique neque quae omnis ea aut enim recusandae
-                                    voluptas ducimus facere, aspernatur, error fugiat accusantium?</p>
-                                <button id="close" class="c-button-modal-close">Close me</button>
+                                <h1>Earth is warming</h1>
+                                <p class="modal__text">The average temperature increase rate has doubled since 1981.</p>
+                                <p class="modal__text">2020 ranked as the second warmest year in
+                                    the
+                                    140-year
+                                    record.<br>
+
+                                </p>
+                                <button id="close" class="c-button-modal-close">Close </button>
                             </div>
                         </div>
                     </div>
