--- a/landingpage2.html
+++ b/landingpage2.html
@@ -44,18 +44,13 @@
                     class="o-layout o-layout--gutter-xl o-layout--justify-center o-layout--align-center  o-layout--row-reverse">
                     <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
                         <div class="u-max-width-sm">
-                            <h2>
-                                Social Trading
-                            </h2>
-                            <p class="c-lead c-lead--md u-color-neutral-base">
-                                Blockport creates a micro-economy where members can use BPT to follow or copy other
-                                members’ portfolios. Beginners can learn from experienced traders and experienced
-                                traders earn BPT in reward by sharing their strategies.
-                            </p>
+                            <picture class="animate__animated animate__fadeInDown animate__delay-1s">
+                                <img class="image-1" src="./img/png/threed_mockup6.png" width="250" height="500">
+                            </picture>
                         </div>
 
                     </div>
-                    <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                    <div class=" o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
                         <div class="u-max-width-sm">
 
                             <div class="columns">
@@ -71,10 +66,12 @@
                                     <h2>Get global warming data instantly.</h2>
                                     <div>
                                         <p class="c-lead c-lead--md u-color-neutral-dark">
-                                            With the Warm app you can track the change of global average temperature
+                                            With the Warm app you can track the change of global average
+                                            temperature
                                             throughout history.
                                         </p>
-                                        <p class="c-lead c-lead--md u-color-neutral-dark">The app contains data temperature
+                                        <p class="c-lead c-lead--md u-color-neutral-dark">The app contains data
+                                            temperature
                                             data of more than a century.</p>
                                     </div>
                                 </div>
@@ -109,20 +106,16 @@
 
         <article class="o-section o-section--xl">
             <div class="o-layout o-layout--gutter-xl o-layout--justify-center o-layout--align-center">
-                <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                <div class="o-layout__item u-2-of-3-bp2 ">
                     <div class="u-max-width-sm">
+                        <picture class="animate__animated animate__fadeInDown animate__delay-1s">
+                            <img class="image-2" src="./img/png/threed_mockup6.png" width="250" height="500">
+                        </picture>
 
                     </div>
                 </div>
-                <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
+                <div class="o-layout__item u-2-of-3-bp2 ">
                     <div class="u-max-width-sm">
-                        <h2>
-                            Discounted trading fees
-                        </h2>
-                        <p class="c-lead c-lead--md u-color-neutral-base">
-                            Transaction fees can be paid in native transaction currency or with BPT. Members who
-                            choose to pay transaction fees with BPT will benefit from a discount
-                        </p>
                     </div>
                 </div>
             </div>
