--- a/landingpage2.html
+++ b/landingpage2.html
@@ -44,8 +44,8 @@
                     class="o-layout o-layout--gutter-xl o-layout--justify-center o-layout--align-center  o-layout--row-reverse">
                     <div class="o-layout__item u-2-of-3-bp2 u-1-of-2-bp3">
                         <div class="u-max-width-sm">
-                            <picture class="animate__animated animate__fadeInDown animate__delay-1s">
-                                <img class="image-1" src="./img/png/threed_mockup6.png" width="250" height="500">
+                            <picture>
+                                <img class="image-1" src="./img/png/mockup.png" width="250" height="500">
                             </picture>
                         </div>
 
@@ -108,8 +108,8 @@
             <div class="o-layout o-layout--gutter-xl o-layout--justify-center o-layout--align-center">
                 <div class="o-layout__item u-2-of-3-bp2 ">
                     <div class="u-max-width-sm">
-                        <picture class="animate__animated animate__fadeInDown animate__delay-1s">
-                            <img class="image-2" src="./img/png/threed_mockup6.png" width="250" height="500">
+                        <picture>
+                            <img class=" image-2" src="./img/png/mockup.png" width="250" height="500">
                         </picture>
 
                     </div>
