--- a/landingpage2.html
+++ b/landingpage2.html
@@ -72,7 +72,7 @@
                                         </p>
                                         <p class="c-lead c-lead--md u-color-neutral-dark">The app contains data
                                             temperature
-                                            data of more than a century.</p>
+                                            of more than a century.</p>
                                     </div>
                                 </div>
 
